# pexfetch

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: videos.md
skills/: README.md
skills/claude/pexels-images/: SKILL.md
skills/codex/pexels-images/: SKILL.md
skills/codex/pexels-images/agents/: openai.yaml
src/: auth.rs  client.rs  error.rs  lib.rs  main.rs  models.rs
tests/: cli.rs
