[package]
name = "pexels-agent-cli"
version = "0.1.0"
edition = "2024"
description = "Agent-friendly CLI for Pexels image search and downloads."

[[bin]]
name = "pexels-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.0.17"
httpmock = "0.7.0"
predicates = "3.1.3"
tempfile = "3.23.0"
